--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -21,56 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dog\n",
-      "cat\n",
-      "200\n",
-      "squirrel\n",
-      "21\n",
-      "zeke\n",
-      "lulu\n",
-      "Length of list: 7\n",
-      "first item: dog\n",
-      "last item: lulu\n",
-      "index 1\n",
-      "index 2\n",
-      "position 2: cat\n",
-      "index 3\n",
-      "index 4\n",
-      "position 4: squirrel\n",
-      "index 5\n",
-      "index 6\n",
-      "position 6: zeke\n",
-      "index 7\n",
-      "S\n",
-      "e\n",
-      "a\n",
-      "t\n",
-      "t\n",
-      "l\n",
-      "e\n",
-      " \n",
-      "S\n",
-      "o\n",
-      "u\n",
-      "n\n",
-      "d\n",
-      "e\n",
-      "r\n",
-      "s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# python uses the [] operator to define a list, or collection of things\n",
     "# here we define a list, and assign it to a variable called my_list\n",
-    "my_list = ['dog', 'cat', 200, 'squirrel', 21, 'zeke', 'lulu']\n",
+    "my_list = ['dog', 'cat', 200, 'squirrel', 21, 'zeke', 'lulu']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# go through the list using the 'for' keyword, assigning the current \n",
     "# value in the list to a variable called item. This process is called iteration, \n",
     "# and can be done on any object in python classified as an 'iterable'\n",
@@ -78,18 +43,42 @@
     "# of code in python - it says we want to repeat the code (in this case a print statement)\n",
     "for item in my_list:\n",
     "    print(item)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# two things here - we use the len function to determine the legth\n",
     "# of the list, and use the format function of a string object, more on that later:\n",
-    "print('Length of list: {}'.format(len(my_list)))\n",
-    "\n",
+    "print('Length of list: {}'.format(len(my_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# first item in list is at position (index) 0\n",
     "print('first item:', my_list[0]) \n",
     "# instead of getting the len() f the list and subtracting 1, \n",
     "# just count from the back of the list\n",
-    "print('last item:', my_list[-1]) \n",
-    "\n",
-    "# here's a different way, if you needed to keep track of where you are\n",
-    "# in the list while iterating, you use the enumerate function\n",
+    "print('last item:', my_list[-1]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# here's a different way to go through. list, if you needed to \n",
+    "# keep track of where you are in the list. Here you use the enumerate \n",
+    "# function to assign an index (a numeric position)\n",
     "for index, item in enumerate(my_list, start=):   # default for start is zero\n",
     "    print('index', index)\n",
     "    if index % 2 == 0:\n",
@@ -99,7 +88,45 @@
     "# even strings are iterable:\n",
     "my_team='Seattle Sounders'\n",
     "for item in my_team:\n",
-    "    print(item)\n"
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try it out\n",
+    "Here's a list of studio albums by Beyonce. Not that here we are using double quotes around the strings, only because B'Day would confuse the code if we used single quotes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bey_albums = [\"Dangerously in Love\", \"B'Day\", \"I Am... Sasha Fierce\", \"4\", \"Beyoncé\", \"Lemonade\"]\n",
+    "\n",
+    "# fix the code that would print out the total number of studio\n",
+    "# albums, and the 3rd album in this list. Replace the ellipsis \n",
+    "# with the code necessary to \n",
+    "print('There are {} studio albums'.format(...))\n",
+    "print('The third album is {}'.format(...))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take a look at https://docs.python.org/3/howto/sorting.html, and \n",
+    "# replace the ellipsis witha way to list out all the albums alphabetically\n",
+    "# you will need to remove the comment symbols from the beginning of each\n",
+    "# line for it to work. Note how sorting behaves with numbers and letters\n",
+    "\n",
+    "#for item in ...:\n",
+    "#    print(item)"
    ]
   },
   {
@@ -137,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
