--- a/Intro2.ipynb
+++ b/Intro2.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignments and equality\n",
-    "Assigments to variables are done using the = operator. Comparing variables uses the == operator, which results in a boolean value"
+    "### Variables, assignments and equality\n",
+    "Variables are placeholders for referencing things in your code, like the variable used to refer to the list of Beyonce's albums. Assigments to variables are done using the = operator. \n",
+    "\n",
+    "Comparing variables can be done using the == operator, which results in a boolean value."
    ]
   },
   {
@@ -62,42 +64,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_value = '' # empty value for a string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "there is no value\n"
+     ]
     }
    ],
    "source": [
-    "my_value == None "
+    "# a caveat: an empty value for a string is 'Falsy', meaning you can check \n",
+    "# for the existence of an empty string is False, not None\n",
+    "my_value = ''\n",
+    "print(bool(my_value))\n",
+    "if my_value:\n",
+    "    print('the value is {}'.format(value))\n",
+    "else:\n",
+    "    print('there is no value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# however, this will not evalate\n",
+    "if my_value is None:\n",
+    "    print('there is no value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No value assigned to the variable\n"
+     ]
+    }
+   ],
+   "source": [
+    "# however, this will \n",
     "if not my_value: # this is a common idion in python, using 'not'\n",
     "    print ('No value assigned to the variable')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -116,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
