--- a/Intro2.ipynb
+++ b/Intro2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Variables, assignments and equality\n",
+    "### Variables, assignments and comparisons\n",
     "Variables are placeholders for referencing things in your code, like the variable used to refer to the list of Beyonce's albums. Assigments to variables are done using the = operator. \n",
     "\n",
     "Comparing variables can be done using the == operator, which results in a boolean value."
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# however, this will not evalate\n",
+    "# however, this will not evaluate\n",
     "if my_value is None:\n",
     "    print('there is no value')"
    ]
@@ -113,14 +113,36 @@
    ],
    "source": [
     "# however, this will \n",
-    "if not my_value: # this is a common idion in python, using 'not'\n",
+    "if not my_value: \n",
     "    print ('No value assigned to the variable')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Other comparisons\n",
+    "In addition to the 'not' modifier mentioned above, you can compare variables using operators like `>, =>, <, <=, and !=`\n",
+    "\n",
+    "Lets figure out the highest value in a list of numbers. Its true that you could sort the the list, and find the last number, but here we will use a variable, and compare it against each item in a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [23, 1, 5, 77, 5, 9, -3, 4, 30, 21, 1999, 10, 12]\n",
+    "# create a variable, well assign it to \n",
+    "# the first number in the list\n",
+    "max_val = numbers[0]\n",
+    "# like befor iterate through the list\n",
+    "for num in numbers:\n",
+    "    if num > max_val:\n",
+    "        max_val = num\n",
+    "print('The max value in the list is {}'.format(max_val))\n"
+   ]
   }
  ],
  "metadata": {
