--- a/Intro2.ipynb
+++ b/Intro2.ipynb
@@ -80,7 +80,7 @@
     "# a caveat: an empty value for a string is 'Falsy', meaning you can check \n",
     "# for the existence of an empty string is False, not None\n",
     "my_value = ''\n",
-    "print(bool(my_value))\n",
+    "print(bool(my_value)) #prints\n",
     "if my_value:\n",
     "    print('the value is {}'.format(value))\n",
     "else:\n",
@@ -129,9 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max value in the list is 1999\n"
+     ]
+    }
+   ],
    "source": [
     "numbers = [23, 1, 5, 77, 5, 9, -3, 4, 30, 21, 1999, 10, 12]\n",
     "# create a variable, well assign it to \n",
@@ -143,6 +151,13 @@
     "        max_val = num\n",
     "print('The max value in the list is {}'.format(max_val))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
