--- a/Intro2.ipynb
+++ b/Intro2.ipynb
@@ -12,20 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_dog = 'lulu'\n",
     "second_dog = 'zeke'\n",
@@ -43,17 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Joe Biden is going to be our 47th president\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "election_has_ended = True\n",
     "if election_has_ended:\n",
@@ -64,23 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "there is no value\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# a caveat: an empty value for a string is 'Falsy', meaning you can check \n",
     "# for the existence of an empty string is False, not None\n",
     "my_value = ''\n",
-    "print(bool(my_value)) #prints\n",
+    "print(bool(my_value)) # prints false\n",
     "if my_value:\n",
     "    print('the value is {}'.format(value))\n",
     "else:\n",
@@ -89,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No value assigned to the variable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# however, this will \n",
     "if not my_value: \n",
@@ -129,23 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The max value in the list is 1999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "numbers = [23, 1, 5, 77, 5, 9, -3, 4, 30, 21, 1999, 10, 12]\n",
     "# create a variable, well assign it to \n",
     "# the first number in the list\n",
     "max_val = numbers[0]\n",
-    "# like befor iterate through the list\n",
+    "# like before iterate through the list\n",
     "for num in numbers:\n",
     "    if num > max_val:\n",
     "        max_val = num\n",
