--- a/Intro3.ipynb
+++ b/Intro3.ipynb
@@ -12,22 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "title\n",
-      "year\n",
-      "length\n",
-      "label\n",
-      "{'title': 'I Am... Sasha Fierce', 'year': 2008, 'length': '41:36', 'label': 'Columbia', 'genre': 'R/B Pop'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a python dictionary\n",
     "sascha = { \"title\": \"I Am... Sasha Fierce\", \"year\": 2008, \"length\": \"41:36\", \"label\": \"Columbia\" }\n",
@@ -51,21 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'genre': 'R/B Pop',\n",
-      " 'label': 'Columbia',\n",
-      " 'length': '41:36',\n",
-      " 'title': 'I Am... Sasha Fierce',\n",
-      " 'year': 2008}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the'import' keyword to bring in the code\n",
     "import pprint\n",
@@ -73,6 +48,25 @@
     "pp = pprint.PrettyPrinter()\n",
     "# use the object's pprint command to format the \n",
     "pp.pprint(sascha)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making a web request\n",
+    "For this one, we will import the 'requests' library and grab the contents of the Yahoo home page. This request returns back a dense amount of HTML code, which we wont go into here, just know that this library is well suited for grabbing data from web sites."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "resp = requests.get('https://www.yahoo.com')\n",
+    "resp.text"
    ]
   },
   {
